added encoder support and new example for Romi32U4

--- a/pi/templates/index.html
+++ b/pi/templates/index.html
@@ -53,6 +53,13 @@
 </tr>
 </table>
 
+<table>
+<tr>
+<th rowspan=2>Encoders</th>
+<td id="encoders0"></td><td id="encoders1"></td>
+</tr>
+</table>
+
 <div id="joystick">
 </div>
 
