Edited A-Star example to have variables for the encoders in the data struct to avoid reading over the edge and added note in html that the encoder are for the Romi only

--- a/pi/templates/index.html
+++ b/pi/templates/index.html
@@ -55,7 +55,7 @@
 
 <table>
 <tr>
-<th rowspan=2>Encoders</th>
+<th rowspan=2>Encoders (Romi&nbsp;only)</th>
 <td id="encoders0"></td><td id="encoders1"></td>
 </tr>
 </table>
